syntax = "proto3";

package beacondns.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/davidseybold/beacondns/internal/gen/proto/beacondns/v1;beacondnspb";

// Constants for zone and resource record set actions
enum ZoneChangeAction {
  ZONE_CHANGE_ACTION_UNSPECIFIED = 0;
  ZONE_CHANGE_ACTION_CREATE = 1;
  ZONE_CHANGE_ACTION_UPDATE = 2;
  ZONE_CHANGE_ACTION_DELETE = 3;
}

enum RRSetChangeAction {
  RR_SET_CHANGE_ACTION_UNSPECIFIED = 0;
  RR_SET_CHANGE_ACTION_CREATE = 1;
  RR_SET_CHANGE_ACTION_UPSERT = 2;
  RR_SET_CHANGE_ACTION_DELETE = 3;
}

enum RRType {
  RR_TYPE_UNSPECIFIED = 0;
  RR_TYPE_SOA = 1;
  RR_TYPE_NS = 2;
  RR_TYPE_A = 3;
  RR_TYPE_AAAA = 4;
  RR_TYPE_CNAME = 5;
  RR_TYPE_MX = 6;
  RR_TYPE_TXT = 7;
  RR_TYPE_SRV = 8;
  RR_TYPE_PTR = 9;
}

enum ChangeType {
  CHANGE_TYPE_UNSPECIFIED = 0;
  CHANGE_TYPE_ZONE = 1;
}

message ResourceRecord {
  string value = 1;
}

message ResourceRecordSet {
  string name = 1;
  RRType type = 2;
  uint32 ttl = 3;
  repeated ResourceRecord resource_records = 4;
}

message ResourceRecordSetChange {
  RRSetChangeAction action = 1;
  ResourceRecordSet resource_record_set = 2;
}

message ZoneChange {
  string zone_name = 1;
  ZoneChangeAction action = 2;
  repeated ResourceRecordSetChange changes = 3;
}

message Change {
  string id = 1;
  ChangeType type = 2;
  optional ZoneChange zone_change = 3;
  google.protobuf.Timestamp submitted_at = 4;
}

message StreamChangesRequest {
  string server_name = 1;

  string response_nonce = 2;
}

message StreamChangesResponse {}

service ZoneChangeService {
  rpc StreamZoneChanges(StreamChangesRequest) returns (stream StreamChangesResponse);
}
